# a-tree

./: .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  build_example.sh  combine_and_link.sh
.github/workflows/: check.yml  release.yml
a-tree-ffi/: README.md  atree.h  build_examples.sh
a-tree-ffi/src/: lib.rs
benches/: benchmarks.rs
benches/data/: search.json
example/: CMakeLists.txt  main.cpp
examples/: search.rs
src/: ast.rs  atree.rs  error.rs  evaluation.rs  events.rs  ffi.rs  grammar.lalrpop  lexer.rs  lib.rs  parser.rs  predicates.rs  strings.rs  test_utils.rs
