[package]
name = "a-tree"
repository = "https://github.com/AntoineGagne/a-tree"
description = "A dynamic data structure for efficiently indexing arbitrary boolean expressions"
authors = ["Antoine Gagné <gagnantoine@gmail.com>"]
readme = "README.md"
license = "LICENSE"
version = "0.1.0"
edition = "2021"
build = "build.rs"
categories = ["data-structures"]
keywords = [
    "adtech",
    "boolean-expression",
    "boolean-logic",
    "data-structure",
    "data-structures",
    "event-filtering",
    "optimization",
    "search",
    "tree"
]

[[bench]]
name = "benchmarks"
harness = false

[build-dependencies]
lalrpop = "0.22.0"

[dependencies]
bimap = "0.6"
itertools = "0.13"
lalrpop-util = { version = "0.22.0", features = ["lexer", "unicode"] }
logos = "0.15"
rust_decimal = "1.36"
slab = "0.4"
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
